manifests/dgraph-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dgraph-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dgraph-api
  template:
    metadata:
      labels:
        app: dgraph-api
    spec:
      containers:
        - name: dgraph-api
          image: okteto/dgraph-api:buildTag
          resources:
            requests:
              memory: '400Mi'
              cpu: '200m'
            limits:
              memory: '800Mi'
              cpu: '400m'
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: dgraph-api-srv
spec:
  selector:
    app: dgraph-api
  ports:
    - name: dgraph-api
      protocol: TCP
      port: 5000
      targetPort: 5000
