manifests/dgraph-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dgraph-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dgraph-gateway
  template:
    metadata:
      labels:
        app: dgraph-gateway
    spec:
      containers:
        - name: dgraph-gateway
          image: okteto/dgraph-gateway:buildTag
          resources:
            requests:
              memory: '400Mi'
              cpu: '200m'
            limits:
              memory: '800Mi'
              cpu: '400m'
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: dgraph-gateway-srv
spec:
  selector:
    app: dgraph-gateway
  ports:
    - name: dgraph-gateway
      protocol: TCP
      port: 5000
      targetPort: 5000
