manifests/gateway-dgraph.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-dgraph
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-dgraph
  template:
    metadata:
      labels:
        app: gateway-dgraph
    spec:
      containers:
        - name: gateway-dgraph
          image: okteto/gateway-dgraph:buildTag
          resources:
            requests:
              memory: '400Mi'
              cpu: '200m'
            limits:
              memory: '800Mi'
              cpu: '400m'
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-dgraph-srv
spec:
  selector:
    app: gateway-dgraph
  ports:
    - name: gateway-dgraph
      protocol: TCP
      port: 5000
      targetPort: 5000
