manifests/payments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: okteto/payments:buildTag
          resources:
            requests:
              memory: '125Mi'
              cpu: '100m'
            limits:
              memory: '250Mi'
              cpu: '200m'
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 4003
      targetPort: 4003
